--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "build:staging": "npm run build &&  cp _redirects build/_redirects",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
